# RiceCall

./: .env.example  .gitignore  .prettierrc  .stylelintrc.json  Cargo.toml  Dockerfile  LICENSE  README.md  claen.js  clean.js  constant.js  dev-app-update.yml  electron-builder.json  extractXpInfo.js  index.js  initial.js  jest.config.js  json.sqlite  main.js  next.config.ts  package-lock.json  package.json  preload.js  tailwind.config.ts  tsconfig.json  xpReCalculate.js
.sqlx/: query-02512b72f6db1df1872faa6588a0709bb4180e4925f9125676c30defbcf84565.json  query-0bd36cc7bd8597a916b5d1918d17512bf2cbd03169609d76286dd3a27ba0344a.json  query-166a526262a22db4e2a167d4d761a89035d19674009f266d8b8225b3df064f65.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2b8b9f2521bc308a9e968ea4a564ab9f8688b930eab6cbd3e4fe062c5cb63965.json  query-3128ec70e50d30a05c8c2a4e637da57e8e1d17c2d2e471ce77324c497f9174b2.json  query-3931e154f3a4e16cfdcda6b274bb92cbb9eae0792c391836ea4cd078f8383bc3.json  query-3c4fb214380b4a0a378f895741b10dec5b81c2e1a032b7bfd75234887a4963e3.json  query-41f5cb9370aa122c13d2e07140ed996afd1f594efa607ed163e344e00dbf8000.json  query-55ae8193d9ba53e4512dff1582490d7587400483c8cfb9c6fa9865a48fba617a.json  query-5cf86df13ff94a8b56a4ec9aca17b3ae2b03f4b6b30967db29abdd785a18c4a1.json  query-60e5d522d8ba1094b0b5848d8727f09d61782cae1b0f49f7301ba7195f9eb3d8.json  query-6537e27aad4ed0128ea7af8c0aa1f5a845679853464a5994563c155c11726eb5.json  query-6a09d25620757e32156be490da808f5fd6579884fcd09a4457baf8befe93787f.json  (+20 more)
__tests__/: _testSetup.js  (+1 more)
(+297 files in other folders)
