[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
socketioxide = { version = "0.16.1", features = ["state"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5.2"
async-trait = "0.1"
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.7"
clap = { version = "4.5", features = ["derive"] }
http = "1.2"
bcrypt = "0.17.0"
getrandom = "0.3"
